--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   ],
   "homepage": "https://github.com/SpraxDev/fast-directory-size#readme",
   "private": true,
-  "main": "src/index.js",
-  "bin": "src/index.js",
+  "main": "dist/index.js",
+  "bin": "dist/index.js",
   "scripts": {
-    "test": "tap",
-    "postinstall": "node src/get-sysinternals-du.js"
+    "test": "tap --ts --no-coverage",
+    "build": "tsc",
+    "prepublish": "npm run build && ts-node src/prepublish.npm.ts"
   },
   "author": "Simone Busoli <simone.busoli@gmail.com>",
   "contributors": [
@@ -36,11 +37,14 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "dependencies": {
-    "unzipper": "^0.10.11"
-  },
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "tap": "^15.0.1"
+    "@tsconfig/node12": "^1.0.7",
+    "@types/node": "~12.20.8",
+    "@types/tap": "^15.0.0",
+    "@types/unzipper": "^0.10.3",
+    "tap": "^15.0.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3",
+    "unzipper": "^0.10.11"
   }
 }
