--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "size-calculation"
   ],
   "homepage": "https://github.com/SpraxDev/fast-directory-size#readme",
-  "private": true,
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "scripts": {
     "test": "npm run build && tap",
     "build": "tsc --declaration",
-    "prepublish": "npm run build && ts-node src/prepublish.npm.ts"
+    "prepublish": "node dist/prepublish.npm.js"
   },
   "author": "Simone Busoli <simone.busoli@gmail.com>",
   "contributors": [
@@ -38,6 +37,9 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "dependencies": {
+    "unzipper": "^0.10.11"
+  },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
     "@types/node": "~12.20.8",
@@ -45,7 +47,6 @@
     "@types/unzipper": "^0.10.3",
     "tap": "^15.0.9",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.2",
-    "unzipper": "^0.10.11"
+    "typescript": "^4.3.2"
   }
 }
